The two parts I did before where a bliss , this part is no longer a bliss , Please tell me I can do it without suffering too much , please ?

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -94,3 +94,7 @@ main {
         }
     }
 }
+
+#Pricing {
+    
+}
